@@ -1,8 +1,9 @@
-Git-annex supports three levels of trust of a repository:
+Git-annex supports several levels of trust of a repository:
 
 * semitrusted (default)
 * untrusted
 * trusted
+* dead
 
 ## semitrusted
 
@@ -49,3 +50,10 @@ trust temporarily.
 
 To configure a repository as fully and permanently trusted,
 use the `git annex trust` command.
+
+## dead
+
+This is used to indicate that you have no trust that the repository
+exists at all. It's appropriate to use when a drive has been lost,
+or a directory irretrevably deleted. It will make git-annex avoid
+even showing the repository as a place where data might still reside.
